[gd_scene load_steps=11 format=2]

[ext_resource path="res://title_screen/death/Death.gd" type="Script" id=1]
[ext_resource path="res://title_screen/system failure.png" type="Texture" id=2]
[ext_resource path="res://title_screen/Fonts/vt323_20.tres" type="DynamicFont" id=3]
[ext_resource path="res://title_screen/Fonts/miltown2_30.tres" type="DynamicFont" id=4]
[ext_resource path="res://title_screen/Continue.gd" type="Script" id=5]
[ext_resource path="res://title_screen/death/Exit.gd" type="Script" id=6]
[ext_resource path="res://samples/musicas/TELA MORTE.wav" type="AudioStream" id=7]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="DeathScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 140.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Decisions" type="VBoxContainer" parent="Menu"]
margin_top = 144.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/Decisions"]
margin_right = 1040.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.243137, 1 )
text = "Hello again.
Well it seems that you died.
But don't worry, that's the way that the life works.
You can't choose when you will die.
Things happen, but I can fix it...
For you..."

[node name="Buttons" type="HBoxContainer" parent="Menu/Decisions"]
margin_top = 139.0
margin_right = 1040.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Continue" type="Button" parent="Menu/Decisions/Buttons"]
margin_right = 518.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
flat = true
script = ExtResource( 5 )

[node name="upgrade" type="Label" parent="Menu/Decisions/Buttons/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
text = "


            Upgrade"

[node name="Exit" type="Button" parent="Menu/Decisions/Buttons"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
flat = true
script = ExtResource( 6 )

[node name="exit" type="Label" parent="Menu/Decisions/Buttons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
text = "


               Exit"

[node name="MusicaMorte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="ColorRect" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="focus_entered" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_focus_entered"]
[connection signal="focus_exited" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_focus_exited"]
[connection signal="mouse_entered" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_mouse_exited"]
[connection signal="pressed" from="Menu/Decisions/Buttons/Continue" to="Menu/Decisions/Buttons/Continue" method="_on_Continue_pressed"]
[connection signal="focus_entered" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_focus_entered"]
[connection signal="focus_exited" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_focus_exited"]
[connection signal="gui_input" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_gui_input"]
[connection signal="mouse_entered" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_mouse_exited"]
[connection signal="focus_entered" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_focus_entered"]
[connection signal="focus_exited" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_focus_exited"]
[connection signal="mouse_entered" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Menu/Decisions/Buttons/Exit" to="Menu/Decisions/Buttons/Exit" method="_on_Exit_pressed"]
[connection signal="focus_entered" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_focus_entered"]
[connection signal="focus_exited" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_focus_exited"]
[connection signal="gui_input" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_gui_input"]
[connection signal="mouse_entered" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_mouse_exited"]
